hydroflow/tests/snapshots/surface_reduce__reduce_tick@graphvis_dot.snap
---
source: hydroflow/tests/surface_reduce.rs
expression: df.serde_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1 [label="(n1v1) source_stream(items_recv)", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n2v1 [label="(n2v1) reduce :: < 'tick > (| acc : u32, next : u32 | acc + next)", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n3v1 [label="(n3v1) for_each(| v | result_send.send(v).unwrap())", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n2v1 -> n3v1
    }
    n1v1 -> n4v1
    n4v1 [label="(n4v1) handoff", fontname=Monaco, shape=parallelogram, style = filled, color = "#ddddff"]
    n4v1 -> n2v1 [arrowhead=box, color=red]
}

