hydroflow/tests/snapshots/surface_reduce__reduce_tick@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_reduce.rs
expression: df.meta_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <code>source_stream(items_recv)</code>"/]:::pullClass
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    2v1[\"(2v1) <code>reduce::&lt;'tick&gt;(|acc: &amp;mut u32, next: u32| *acc += next)</code>"/]:::pullClass
    3v1[/"(3v1) <code>for_each(|v| result_send.send(v).unwrap())</code>"\]:::pushClass
    2v1--->3v1
end
1v1--->4v1
4v1["(4v1) <code>handoff</code>"]:::otherClass
4v1===o2v1

